testsuite/tests/name_resolution/late_use_clause/test.out
Analyzing testuse.adb
#####################

Resolving xrefs for node <ObjectDecl ["C"] testuse.adb:14:7-14:24>
******************************************************************

testuse.adb:14:20: error: expected Float, got Integer
14 |       C : Float := Foo;
   |                    ^^^


Expected name resolution failure for node <ObjectDecl ["C"] testuse.adb:14:7-14:24>


Done.
